--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Game Time</title>
+  <title>Slime Volleyball</title>
 </head>
 <body>
-
   <script src="main.bundle.js"></script>
 </body>
 </html>
