Begin to build menu

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
   <script src="main.bundle.js"></script>
+  <div class="start-menu">
+    <button id="level_one" class="menu-items start-button">Level 1 - Easy</button>
+    <button id="level_two" class="menu-items start-button">Level 2 - Medium</button>
+    <button id="level_three" class="menu-items start-button">Level 3 - Hard</button>
+  </div>
 </body>
 </html>
